--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-aling:center;
 }
 .heroIm{
     width: 60%;
